# rust-web-service

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  justfile  questions.json
.github/: dependabot.yml
docs/: api.md  auth-design.md  index.md
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
migrations/: 20240922191917_questions_table.up.sql  20250605070446_answers_table.up.sql  20260719130000_answers_question_id_cascade.down.sql  20260719130000_answers_question_id_cascade.up.sql  20260719170000_users_auth.down.sql  20260719170000_users_auth.up.sql
src/: auth_crypto.rs  error.rs  lib.rs  main.rs  rate_limit.rs  store.rs
src/routes/: answer.rs  api.rs  auth.rs  login.rs  mod.rs  question.rs
src/types/: answer.rs  login.rs  mod.rs  pagination.rs  question.rs  user.rs
static/: auth.js  index.html  main.js  new-question.html  new-question.js  question.html  question.js  style.css
tests/: integration.rs
